small fix for scrollbar on desktop version

--- a/chat.less
+++ b/chat.less
@@ -21,6 +21,9 @@
     .c-message--light .c-message__sender .c-message__sender_link {
         .reset-all()
     }
+    .p-message_pane .c-message_list.c-virtual_list--scrollbar>.c-scrollbar__hider {
+        .chat-area();
+    }
     h1,
     h2,
     h3,
